Added basic layout

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Electex</title>
 
     <link href="bower_components/tether/dist/css/tether.min.css" rel="stylesheet">
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap/dist/css/bootstrap-flex.min.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -19,9 +18,19 @@
     <script>if (window.module) module = window.module;</script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <nav class="navbar navbar-full navbar-dark">
+      <a class="nav-item nav-link" id="open"><i class="fa fa-folder-open fa-2x icon-navbar" aria-hidden="true"></i></a>
+    </nav>
+    <div class="row">
+      <div class="col-md-2 tree-bar">
+
+      </div>
+      <div class="col-md-5">
+
+      </div>
+      <div class="col-md-5">
+
+      </div>
+    </div>
   </body>
 </html>
