Made open button clickable

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-full navbar-dark">
-      <a class="nav-item nav-link" id="open"><i class="fa fa-folder-open fa-2x icon-navbar" aria-hidden="true"></i></a>
+      <a class="nav-item nav-link" href="#" id="open"><i class="fa fa-folder-open fa-2x icon-navbar" aria-hidden="true"></i></a>
     </nav>
     <div class="row">
       <div class="col-md-2 tree-bar">
