Added basic compiling setup

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <nav class="navbar navbar-full navbar-dark">
       <a class="nav-item nav-link" href="#" id="new"><i class="fa fa-folder-open fa-2x icon-navbar" aria-hidden="true"></i></a>
       <a class="nav-item nav-link" href="#" id="open"><i class="fa fa-file fa-2x icon-navbar" aria-hidden="true"></i></a>
+      <a class="nav-item nav-link" href="#" id="run"><i class="fa fa-play fa-2x icon-navbar" aria-hidden="true"></i></a>
     </nav>
     <div class="container-fluid">
       <div class="row h-100">
