--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/tether/dist/js/tether.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="js/main.js"></script>
 
     <script>if (window.module) module = window.module;</script>
@@ -33,8 +34,8 @@
         <div class="col-md-5 col-sm-6 editing-window h-100" id="editingWindow">
 
         </div>
-        <div class="col-md-5 col-sm-6 viewing-window h-100">
-
+        <div class="col-md-5 col-sm-6 viewing-window h-100" id="viewingWindow">
+          <canvas id="pdfViewer"></canvas
         </div>
       </div>
     </div>
