Added line numbering

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
         </div>
         <div class="col-md-5 col-sm-6 viewing-window h-100" id="viewingWindow">
-          <canvas id="pdfViewer"></canvas
+          <canvas id="pdfViewer"></canvas>
         </div>
       </div>
     </div>
-    <div hidden class="editor-row" id="baseEditorRow"></div>
+    <div hidden class="editor-row" id="baseEditorRow"><span class="line-number mr-1"></span></div>
   </body>
 </html>
