Added typed js to project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/tether/dist/js/tether.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/typed.js/dist/typed.min.js"></script>
     <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="js/main.js"></script>
 
